# gemconnect-lib-

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
GemConnect/: gempython.toml  pyproject.toml  test.py
GemConnect/gemconnect/: __init__.py  connector.py  errors.py
