[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"



[project]
name = "gemconnect"
version = "1.2.1"
description = "gemconnect sits between Flask and Gemini, calls the API safely, and if anything goes wrong translates the scary technical error into a simple message the beginner can understand and fix."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
authors = [
    {name = "Divya P", email = "131283175+DIVICODER@users.noreply.github.com"}
]

[project.urls]
Homepage = "https://github.com/DIVICODER/gemconnect-lib-"

[tool.setuptools]
package-dir = {"" = "GemConnect"}
packages = ["gemconnect"]
